// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionPlay Dialog play not paused operator Renders the component 1`] = `
<fragment-stub data-test="render-fragment"><span><button disabled="disabled" type="button" class="v-icon notranslate v-icon--disabled v-icon--link mdi mdi-play-circle theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`SessionPlay Dialog play not paused owner Renders the component 1`] = `
<fragment-stub data-test="render-fragment"><span><button type="button" class="v-icon notranslate v-icon--link mdi mdi-play-circle theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`SessionPlay Dialog play paused operator Renders the component 1`] = `
<fragment-stub data-test="render-fragment"><span><button disabled="disabled" type="button" class="v-icon notranslate v-icon--disabled v-icon--link mdi mdi-play-circle theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`SessionPlay Dialog play paused owner Renders the component 1`] = `
<fragment-stub data-test="render-fragment"><span><button type="button" class="v-icon notranslate v-icon--link mdi mdi-play-circle theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`SessionPlay Icon with record operator Renders the component 1`] = `
<fragment-stub data-test="render-fragment"><span><button disabled="disabled" type="button" class="v-icon notranslate v-icon--disabled v-icon--link mdi mdi-play-circle theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`SessionPlay Icon with record owner Renders the component 1`] = `
<fragment-stub data-test="render-fragment"><span><button type="button" class="v-icon notranslate v-icon--link mdi mdi-play-circle theme--light"></button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`SessionPlay Icon without record operator Renders the component 1`] = `
<fragment-stub data-test="render-fragment">
  <!---->
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`SessionPlay Icon without record owner Renders the component 1`] = `
<fragment-stub data-test="render-fragment">
  <!---->
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
